(add new changes on top of this file)

Änderungen
----------

v0.8.1 (??.05.2010)
 * tx_rnbase_util_FormTool::createEditButton with confirm option
 * tx_rnbase_util_Link: new TS options noCache and noHash
 * SearchBase: Ignore invalid queries for SEARCH_FIELD_JOINED

v0.8.0 (11.05.2010)
 * Additional check for installed DAM in tx_rnbase_util_TSDAM
 * Current SITE_URL is included in error mail

v0.7.8 (02.05.2010) (not released)
 * New option forceException4Mayday in EM
 * New method tx_rnbase_util_Templates::getSubpart

v0.7.7 (01.05.2010) (not released)
 * New class tx_rnbase_util_SimpleMarker
 * GET and POST vars for error mail added
 * tx_rnbase_Controller: missing include fixed
 
v0.7.6 (29.04.2010) (not released)
 * ErrorMail: Send only one mail within one minute.
 * It is possible to configure error messages for uncaught exceptions. Create a default language label ERROR_default in your extension language file. You can define labels for each exception error code like ERROR_123.

v0.7.5 (29.04.2010) (not released)
 * mod_BaseModFunc: new default marker with performance data: ###MOD_PARSETIME###, ###MOD_MEMUSED###, ###MOD_MEMSTART###, ###MOD_MEMEMD###

v0.7.4 (24.04.2010) (not released)
 * Configuration of TYPO3 Cache fixed
 * New method has() for Cache

v0.7.3 (23.04.2010) (not released)
 * New method configurations::getConfigArray()
 * ListBuilder: Markerclass for PageBrowser is configurable by Typoscript

v0.7.2 (20.04.2010) (not released)
 * Exception handling fixed

v0.7.1 (16.04.2010) (not released)
 * Mail info for uncaught exceptions
 * New class tx_rnbase_util_Logger
 
v0.7.0 (05.04.2010)
 * Some fixes in DB layer

v0.6.8 (01.04.2010) (not released)
 * PageBrowser in ListBuilder fixed
 * util_DB: Some fixes in searchWhere(). Unit test added.

v0.6.7 (26.03.2010) (not released)
 * util_DB: Some fixes in searchWhere(). Unit test added.
 * New class rx_rnbase_util_Json

v0.6.6 (25.03.2010) (not released)
 * New unit test for ListBuilder