@@ -7,6 +7,8 @@ v0.8.1 (??.05.2010)
  * tx_rnbase_util_FormTool::createEditButton with confirm option
  * tx_rnbase_util_Link: new TS options noCache and noHash
  * SearchBase: Ignore invalid queries for SEARCH_FIELD_JOINED
+ * tx_rnbase_util_DB: Bugfix for OP_LIKE with multiple strings. 
+ * tx_rnbase_util_DB: New operator OP_LIKE_CONST.
 
 v0.8.0 (11.05.2010)
  * Additional check for installed DAM in tx_rnbase_util_TSDAM
